--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 
-VITE_SUPABASE_URL=https://gbcnjtcbyjzcnhwwrxae.supabase.co
-VITE_SUPABASE_ANON_KEY=sb_publishable_DD5ntP682YmkNqia1TWtyg_2iqYq8Lc
+VITE_SUPABASE_URL=https://onmnbxhztnpidfvnqgxd.supabase.co
+VITE_SUPABASE_ANON_KEY=sb_publishable_C4EZtInGtZiFM58eCQoMvg_pzU5C0tu
